--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -7,6 +7,18 @@ label {
     float:left;
     padding-right:10px;
 }
-.main {float:left}
+.main {
+    float:left;
+    padding-top: 20px;
+}
 
-
+body{
+    font-family:  "Comic Sans MS", cursive;
+    width: 400px;
+    border: solid;
+    margin: 20px;
+    padding-left: 20px;
+    padding-top: 30px;
+    position: fixed;
+    height: 530px;
+}
