--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -15,10 +15,11 @@ label {
 body{
     font-family:  "Comic Sans MS", cursive;
     width: 400px;
-    border: solid;
+    border: thin solid black;
     margin: 20px;
     padding-left: 20px;
     padding-top: 30px;
     position: fixed;
     height: 530px;
+
 }
